# pinger

./: .gitignore  CMakeLists.txt  main.cpp  pinger.conf
inc/: config_reader.h  pinger.h  program_timer.h
src/: config_reader.cpp  pinger.cpp
